--- a/portfolio.html
+++ b/portfolio.html
@@ -15,11 +15,11 @@
                 <div class="p-4 pt-5 mobile">
                   <a href='#main' rel="me" class="person u-url">
                     <div class="person-avatar u-photo">
-                      <img src="./assets/raunak.jpg" alt="avatar" class="avatar" style="border-radius: 50%">
+                      <img src="./assets/raunak.png" alt="avatar" class="avatar" style="border-radius: 50%">
                     </div>
                     <div class="person-content mt-5">
                       <h2 class="person-title p-name">Ronak Gandhi</h2>
-                      <h4 class="person-subtitle p-job-title p-note">Full-Stack Software Engineer</h4>
+                      <h4 class="person-subtitle p-job-title p-note">Full-Stack Engineer</h4>
                     </div>
                   </a>
                   <!--<a href="#" class="img logo rounded-circle mb-5" style="background-image: url(../assets/RonakImage.jpg);"></a>-->
@@ -67,7 +67,7 @@
                           </h1>
                       
                           <h2 class="home-subheading">
-                              a freelance software engineer specialized&nbsp;in<br>
+                              a software engineer specialized&nbsp;in<br>
                               both <strong>front-end and back-end</strong>.
                           </h2>
                       
